fix: box bolsistas gap

--- a/styles/index.css
+++ b/styles/index.css
@@ -563,7 +563,7 @@ main .containers {
 .bolsistas .box {
   display: flex;
   justify-content: center;
-  gap: 3rem;
+  gap: 7rem;
 }
 
 .bolsistas .box .box-equipe {
